cabal-version:      2.4
name:               servant-tfb
version:            1
homepage:
  https://github.com/TechEmpower/FrameworkBenchmarks/tree/master/frameworks/Haskell/servant/2pkg

license:            BSD-3-Clause
author:             Oleg.Grenrus
maintainer:         oleg.grenrus@iki.fi
category:           Web, Servant
build-type:         Simple
extra-source-files: README.md

common deps
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall -threaded -rtsopts -funbox-strict-fields
  build-depends:
    , aeson           
    , base            
    , bytestring      
    , lucid           
    , servant         
    , servant-lucid   
    , servant-server  
    , splitmix        
    , text            
    , transformers    
    , vector          
    , warp            

common db-deps
  import:        deps
  build-depends:
    , postgresql-simple
    , resource-pool    

executable servant
  import:        deps
  other-modules: Lib
  main-is:       Main.hs

executable servant-beam
  import:        db-deps
  other-modules: Lib
  main-is:       Main.hs
  cpp-options:   -DDB_BEAM
  build-depends:
    , beam-core      
    , beam-postgres  

executable servant-psql-simple
  import:        db-deps
  other-modules: Lib
  main-is:       Main.hs
  cpp-options:   -DDB_PSQL_SIMPLE

executable servant-sentry
  import:        deps
  other-modules: Lib
  main-is:       Main.hs
  build-depends: better-sentry-raven
               , http-client-tls
               , uuid
               , vault
               , wai
               , bytestring

  cpp-options: -DSENTRY

executable servant-sentry-beam
  import:        db-deps
  other-modules: Lib
  main-is:       Main.hs
  cpp-options:   -DDB_BEAM -DSENTRY
  build-depends: beam-core      
               , beam-postgres  
               , better-sentry-raven
               , http-client-tls
               , uuid
               , vault
               , wai
               , bytestring

executable servant-sentry-psql-simple
  import:        db-deps
  other-modules: Lib
  main-is:       Main.hs
  cpp-options:   -DDB_PSQL_SIMPLE -DSENTRY
  build-depends: better-sentry-raven
               , http-client-tls
               , uuid
               , vault
               , wai
               , bytestring
